@@ -3,6 +3,9 @@
 	* tests/encoding.test: Uncomment tests 3.5 and 3.6 and mark as knownBug
 	so that they show up in the test summary as skipped. Untabify.
 
+	* nsd/progress.c (NsTclProgressObjcmd): Make sure progress monitoring is
+	enabled before checking an uninitialised hash table.
+
 2007-05-21  Vlad Seryakov  <seryakov@users.sf.net>
 
         * nsperm/nsperm.c: Updated to support clear text passwords
